--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,1 +1,19 @@
-{"meta":{"username":"brieb","repositoryName":"hubpress.io","branch":"gh-pages","cname":"briebunge.com"},"site":{"title":"Brie Bunge","description":"This is my new Blog! :)","url":"//briebunge.com/hubpress.io"},"socialnetwork":{"email":"brie@cs.stanford.edu"},"theme":{"name":"Casper","url":"//brieb.github.io/hubpress.io/themes/Casper"}}
+{
+  "meta": {
+    "username": "brieb",
+    "repositoryName": "hubpress.io",
+    "branch": "gh-pages"
+  },
+  "site": {
+    "title": "Brie Bunge",
+    "description": "This is my new Blog! :)",
+    "url": "//briebunge.com/hubpress.io"
+  },
+  "socialnetwork": {
+    "email": "brie@cs.stanford.edu"
+  },
+  "theme": {
+    "name": "Casper",
+    "url": "//brieb.github.io/hubpress.io/themes/Casper"
+  }
+}
